syntax = "proto3";

package user;

option go_package = "github.com/kota/distributed-system-sample/user-service/proto/user";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc GetUser (GetUserRequest) returns (User);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}

message ListUsersRequest {
  // Pagination can be added here
}

message ListUsersResponse {
  repeated User users = 1;
}
